Minor fix of spacing and accessibility

--- a/skins/SMW_custom.css
+++ b/skins/SMW_custom.css
@@ -131,12 +131,15 @@ span.smwwarning {
 }
 
 /* ui buttons for QueryUI */
-span.smw-remove a{
-	background: url(images/close-button.png) center no-repeat;
-	height: 16px;
-	width: 16px;
-	text-decoration: none;
+.smw-sort input, .smw-sort a, .smw-sort select, .smw-sort checkbox{
+	margin-left: 5px;
 }
+span.smw-remove a img{
+	text-decoration: none;
+	margin-right: 5px;
+	vertical-align: -3px;
+}
+
 
 /* search, browse, RDF icons */
 
